kubernetes/apps/default/authentik/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: authentik-ext-auth
  namespace: default
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: monitoring
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: flux-system
  to:
    - group: ""
      kind: Service
      name: authentik-server
