kubernetes/apps/default/authentik/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: default
spec:
  hostnames:
    - "login.${SECRET_DOMAIN}"
  parentRefs:
    - name: external
      namespace: kube-system
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
